<resources>
    <string name="app_name">OTP verification</string>
    <string name="we_will_send_otp_on_this_mobile_number">We will send OTP on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_otp">Please Enter the OTP</string>
    <string name="didn_t_receive_the_otp">Didn\'t Receive the otp</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="get_otp">Get OTP</string>
</resources>